--- a/views/Admin/productMngt.ejs
+++ b/views/Admin/productMngt.ejs
@@ -107,7 +107,7 @@
           </a>
         </li>
         <li class="nav-item menu-items">
-          <a class="nav-link" data-toggle="collapse" href="/productMngt" aria-expanded="false" aria-controls="ui-basic">
+          <a class="nav-link"  href="/productMngt" >
             <span class="menu-icon">
               <i class="mdi mdi-laptop"></i>
             </span>
@@ -123,7 +123,7 @@
           </a>
         </li>
         <li class="nav-item menu-items">
-          <a class="nav-link" data-toggle="collapse" href="/couponMngt" aria-expanded="false" aria-controls="auth">
+          <a class="nav-link" href="/couponMngt" >
             <span class="menu-icon">
               <i class="mdi mdi-security"></i>
             </span>
@@ -132,7 +132,7 @@
         </li>
 
         <li class="nav-item menu-items">
-          <a class="nav-link" data-toggle="collapse" href="/salesReport" aria-expanded="false" aria-controls="auth">
+          <a class="nav-link"  href="/salesReport">
             <span class="menu-icon">
               <i class="mdi mdi-security"></i>
             </span>
@@ -141,8 +141,7 @@
         </li>
 
         <li class="nav-item menu-items">
-          <a class="nav-link" data-toggle="collapse" href="/offers" aria-expanded="false"
-            aria-controls="auth">
+          <a class="nav-link"  href="/offers" >
             <span class="menu-icon">
               <i class="mdi mdi-security"></i>
             </span>
@@ -151,7 +150,7 @@
         </li>
 
         <li class="nav-item menu-items">
-          <a class="nav-link" data-toggle="collapse" href="/categoryoffers" aria-expanded="false" aria-controls="auth">
+          <a class="nav-link"  href="/categoryoffers" >
             <span class="menu-icon">
               <i class="mdi mdi-security"></i>
             </span>
