--- a/views/User/404.ejs
+++ b/views/User/404.ejs
@@ -9,20 +9,20 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>404 Page - BIGBAG</title>
+    <title>404 Page - H_loom</title>
 
     <!-- PLUGINS CSS STYLE -->
-    <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href='assets/plugins/fontawesome-5.15.2/css/all.min.css' rel='stylesheet'>
-    <link href='assets/plugins/fontawesome-5.15.2/css/fontawesome.min.css' rel='stylesheet'>
-    <link href="assets/plugins/animate/animate.css" rel="stylesheet">
+    <link href="/assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href='/assets/plugins/fontawesome-5.15.2/css/all.min.css' rel='stylesheet'>
+    <link href='/assets/plugins/fontawesome-5.15.2/css/fontawesome.min.css' rel='stylesheet'>
+    <link href="/assets/plugins/animate/animate.css" rel="stylesheet">
 
     <!-- GOOGLE FONT -->
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
 
     <!-- CUSTOM CSS -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/default.css" id="option_color">
+    <link href="/assets/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="/assets/css/default.css" id="option_color">
 
     <!-- Icons -->
     <link rel="shortcut icon" href="assets/img/favicon.png">
@@ -43,26 +43,26 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-md-6 col-12">
-            <a class='navbar-brand pageLogo' href='index.html'><img src="assets/img/logo.png" alt="logo"></a>
+            <a class='navbar-brand pageLogo' href='/'><h3></h3></a>
             <h1>404</h1>
             <h2>Oops! Page Not Found</h2>
             <form class="input-group">
               <input type="text" class="form-control" required placeholder="Search again" aria-describedby="basic-addon2">
               <button type="submit" class="input-group-addon" id="basic-addon2"><i class="fa fa-search"></i></button>
             </form>
-            <a class='btn btn-default' href='index.html' role='button'>Go Back</a>
+            <a class='btn btn-default' href='/' role='button'>Go Back</a>
           </div>
         </div>
       </div>
     </section>
 
-		<script src="assets/plugins/jquery/jquery-3.5.1.min.js"></script>
-    <script src="assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/plugins/smoothscroll/SmoothScroll.js"></script>
-		<script src="assets/js/custom.js"></script>
+		<script src="/assets/plugins/jquery/jquery-3.5.1.min.js"></script>
+    <script src="/assets/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/assets/plugins/smoothscroll/SmoothScroll.js"></script>
+		<script src="/assets/js/custom.js"></script>
 
   <link href="assets/options/optionswitch.css" rel="stylesheet">
-<script src="assets/options/optionswitcher.js"></script>
+<script src="/assets/options/optionswitcher.js"></script>
 </body>
 
 <!-- Mirrored from bigbag-html.netlify.app/404 by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 09 Dec 2023 09:40:44 GMT -->
